--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <div class="card featured">
       <h3>Pro</h3>
-      <p class="price">$3,000–$7,500 / mo</p>
+      <p class="price">$4,999 / mo</p>
       <ul>
         <li>+ Swaps (7d), Window Metrics</li>
         <li>Token State (latest), Price Snapshots (48h)</li>
