--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Crypto Data – Pro CSV Packages</title>
   <link rel="stylesheet" href="styles.css"/>
+  <!-- Memberstack webflow package -->
+<script data-memberstack-app="app_cmew54dd2000p0wx5472r5qj8" src="https://static.memberstack.com/scripts/v1/memberstack.js" type="text/javascript"></script>
 </head>
 <body>
   <header class="container">
