--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <h3>Pro</h3>
       <p class="price">$4,999 / mo</p>
       <ul>
-        <li>+ Swaps (7d), Window Metrics</li>
+        <li>Swaps (7d), Window Metrics</li>
         <li>Token State (latest), Price Snapshots (48h)</li>
         <li>Daily or On‑Demand at purchase</li>
       </ul>
@@ -79,7 +79,7 @@
   </div>
 
   <footer class="container footer">
-    <small>© <span id="year"></span> Bindi Data — Clean crypto market datasets.</small>
+    <small>© <span id="year"></span> Bindi Investments LLC — Clean Solana datasets.</small>
   </footer>
 
 <script>
